sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  
  for (i <- 1 to getNombreValeurs()-1) {
    
    var v = getValeur(i)
    
    while (i > 0 && getValeur(i-1) > v) {
      
      echange(i,i-1)
      i = i - 1
      
    }
    
    setValeur(i,v)
    
  }
  
}